plugins {
    id 'java'
}

group 'org.github.jay-ar.brouillard'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    maven { url "https://jitpack.io" }
    mavenCentral()
    jcenter()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'net.dv8tion:JDA:4.1.1_117'
    implementation 'org.apache.commons:commons-lang3:3.6'
    compile 'io.github.cdimascio:java-dotenv:5.1.3'
    implementation 'com.konghq:unirest-java:3.7.01'
    implementation 'com.google.guava:guava:29.0-jre'
    compile 'com.google.api-client:google-api-client:1.30.4'
    compile 'com.google.oauth-client:google-oauth-client-jetty:1.30.6'
    compile 'com.google.apis:google-api-services-sheets:v4-rev581-1.25.0'
}

apply plugin: 'java'
jar {
    manifest {
        attributes(
                'Main-Class': 'Main'
        )
    }
}

//task stage(dependsOn: ['build', 'clean'])
//build.mustRunAfter clean
//
//task copyToLib(type: Copy) {
//    into "build/libs"
//    from(configurations.compile)
//}
//
//stage.dependsOn(copyToLib)